added profile for JDK14, removed obsolete profiles